# creator-assistant-agent

./: .env.example  .gitignore  README.md  demo.py  langgraph.json  pyproject.toml  requirements.txt  server.py
data/: sample_video_metrics.json
knowledges/: 00_README.md  02_architecture.md  03_langgraph_workflow.md  06_runbook.md  07_checkpoint_resume.md  08_productization_dashboard.md  README.md  architecture.md  data_contract.md  langgraph_workflow.md  project_overview.md  runbook.md  vector_memory.md
static/: dashboard.css  dashboard.js
templates/: dashboard.html
test/: test_bilibili_collector.py  test_checkpoint_interrupt.py  test_creator_memory.py  test_service_api.py
video_review_agent/: __init__.py  analytics.py  bilibili_collector.py  collectors.py  config.py  dashboard.py  graph.py  llm.py  memory.py  reporting.py  service.py  state.py
